--- a/marcio-xerem/index.html
+++ b/marcio-xerem/index.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loja Online</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <title>Página inicial</title>
 </head>
 <body>
-    <main>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3" id="coluna1"></div>
-            <div class="col-md-3" id="coluna2"></div>
-            <div class="col-md-3" id="coluna3"></div>
-            <div class="col-md-3" id="carrinho"></div>
+    
+    <main class="row">
+
+        <div class="catalogo col-8">
+
+            <h1>Produtos</h1>
+
+            <div class="container-produtos row">              
+
+            </div>
+
         </div>
-    </div>
+
+        <div class="container-carrinho col-4">
+            <div class="carrinho">
+                <h2>Your Cart (0)</h2>
+
+                <div class="lista-produtos">
+                    <img src="assets/carrinho.png" class="vazio">
+                </div>
+
+            </div>
+        </div>
+
     </main>
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
