sexto commit - Inclusão do modal resumo da compra ao programa principal

--- a/marcio-xerem/index.html
+++ b/marcio-xerem/index.html
@@ -16,7 +16,9 @@
 
             <h1>Produtos</h1>
 
-            <div class="container-produtos row">              
+            <div class="container-produtos row">
+
+        
 
             </div>
 
@@ -30,10 +32,14 @@
                     <img src="assets/carrinho.png" class="vazio">
                 </div>
 
+                <div class="valor-total-carrinho">
+
+                </div>
+
             </div>
         </div>
 
     </main>
-<script src="script.js"></script>
+<script src="script.js" type="module"></script>
 </body>
 </html>
