Integração do carrinho entre a página principal e a página individual do produto

--- a/marcio-xerem/index.html
+++ b/marcio-xerem/index.html
@@ -26,7 +26,7 @@
 
         <div class="container-carrinho col-4">
             <div class="carrinho">
-                <h2>Your Cart (0)</h2>
+                <h2>Seu carrinho (0)</h2>
 
                 <div class="lista-produtos">
                     <img src="assets/carrinho.png" class="vazio">
