oitavo commit - inclusão da ata da terceira reunião

--- a/marcio-xerem/index.html
+++ b/marcio-xerem/index.html
@@ -12,7 +12,7 @@
     
     <main class="row">
 
-        <div class="catalogo col-8">
+        <div class="catalogo col-xxl-8 col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12">
 
             <h1>Produtos</h1>
 
@@ -24,9 +24,9 @@
 
         </div>
 
-        <div class="container-carrinho col-4">
+        <div class="container-carrinho col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
             <div class="carrinho">
-                <h2>Your Cart (0)</h2>
+                <h2>Seu carrinho (0)</h2>
 
                 <div class="lista-produtos">
                     <img src="assets/carrinho.png" class="vazio">
@@ -43,4 +43,3 @@
 <script src="script.js" type="module"></script>
 </body>
 </html>
-
